--- a/assets/css/scss/atoms/_password.scss
+++ b/assets/css/scss/atoms/_password.scss
@@ -47,7 +47,7 @@
   }
 
   &-toggle-mask-icon {
-    @apply inset-y-3.5 right-3.5 text-gray-90 absolute w-4 h-4;
+    @apply inset-y-0 right-4 text-gray-90 absolute w-4 h-full;
   }
 
   &:has(&-mask-icon) &-input {
