Display: Add styles for primevue float-label

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -37,6 +37,7 @@
 @include meta.load-css("atoms/divider");
 @include meta.load-css("atoms/dropdown");
 @include meta.load-css("atoms/fieldset");
+@include meta.load-css("atoms/float_label");
 @include meta.load-css("atoms/inline_message");
 @include meta.load-css("atoms/inputgroup");
 @include meta.load-css("atoms/input_switch");
