--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -35,7 +35,6 @@
 @include meta.load-css("atoms/checkbox");
 @include meta.load-css("atoms/color_picker");
 @include meta.load-css("atoms/divider");
-@include meta.load-css("atoms/dropdown");
 @include meta.load-css("atoms/fieldset");
 @include meta.load-css("atoms/float_label");
 @include meta.load-css("atoms/inline_message");
@@ -49,6 +48,7 @@
 @include meta.load-css("atoms/progressbar");
 @include meta.load-css("atoms/radio");
 @include meta.load-css("atoms/rating");
+@include meta.load-css("atoms/select");
 @include meta.load-css("atoms/skeleton");
 @include meta.load-css("atoms/tags");
 @include meta.load-css("atoms/toast");
